@@ -72,6 +72,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|IOException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|lang
 operator|.
 name|reflect
@@ -535,6 +545,7 @@ name|src
 init|=
 literal|"/testRetryAddBlockWhileInChooseTarget"
 decl_stmt|;
+specifier|final
 name|FSNamesystem
 name|ns
 init|=
@@ -648,6 +659,18 @@ operator|.
 name|callRealMethod
 argument_list|()
 decl_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Penultimate block must be complete"
+argument_list|,
+name|checkFileProgress
+argument_list|(
+name|src
+argument_list|,
+literal|false
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|count
 operator|++
 expr_stmt|;
@@ -685,6 +708,18 @@ operator|.
 name|GRANDFATHER_INODE_ID
 argument_list|,
 literal|null
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+literal|"Penultimate block must be complete"
+argument_list|,
+name|checkFileProgress
+argument_list|(
+name|src
+argument_list|,
+literal|false
+argument_list|)
 argument_list|)
 expr_stmt|;
 name|LocatedBlocks
@@ -948,6 +983,67 @@ name|getBlock
 argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
+DECL|method|checkFileProgress (String src, boolean checkall)
+name|boolean
+name|checkFileProgress
+parameter_list|(
+name|String
+name|src
+parameter_list|,
+name|boolean
+name|checkall
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|FSNamesystem
+name|ns
+init|=
+name|cluster
+operator|.
+name|getNamesystem
+argument_list|()
+decl_stmt|;
+name|ns
+operator|.
+name|readLock
+argument_list|()
+expr_stmt|;
+try|try
+block|{
+return|return
+name|ns
+operator|.
+name|checkFileProgress
+argument_list|(
+name|src
+argument_list|,
+name|ns
+operator|.
+name|dir
+operator|.
+name|getINode
+argument_list|(
+name|src
+argument_list|)
+operator|.
+name|asFile
+argument_list|()
+argument_list|,
+name|checkall
+argument_list|)
+return|;
+block|}
+finally|finally
+block|{
+name|ns
+operator|.
+name|readUnlock
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 comment|/*    * Since NameNode will not persist any locations of the block, addBlock()    * retry call after restart NN should re-select the locations and return to    * client. refer HDFS-5257    */
 annotation|@
